@@ -30,7 +30,7 @@ on one day.
 <dt><b>LilyPond 2.9.29 available</b> - <em>November 5, 2006</em>
 
 <dd>
-This release many more bugfixes.  (<a
+This release has many more bugfixes.  (<a
 href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_29&colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
 <a href="install/#2.9">Download</a>)
 
@@ -39,7 +39,7 @@ href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_29&colspec
 <dt><b>LilyPond 2.9.28 available</b> - <em>November 3, 2006</em>
 
 <dd>
-This release many more bugfixes.  (<a
+This release has many more bugfixes.  (<a
 href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_28&colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
 <a href="install/#2.9">Download</a>)
 
@@ -52,28 +52,6 @@ This release has a new <tt>FretBoards</tt> context, and some further
 bugfixes.  (<a
 href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
 href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_27&colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
-<a href="install/#2.9">Download</a>)
-
-</dd>
-
-<dt><b>Music streams thesis available</b> - <em>October 21, 2006</em>
-
-<dd>
-The last months, Erik Sandberg has been overhauling the internals of
-Lily. This change introduces a new intermediate format, Music Streams,
-which will make it easier get music data out of LilyPond. A copy of
-the thesis is now available from lilypond.org (<a
-href="@IMAGES@thesis-erik-sandberg.pdf">download PDF 750k</a>)
-
-</dd>
-
-
-
-<dt><b>LilyPond 2.9.26 available</b> - <em>October 20, 2006</em>
-
-<dd>
-This release has further bugfixes.   (<a
-href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_26&colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
 <a href="install/#2.9">Download</a>)
 
 </dd>
