@@ -22,6 +22,28 @@
       <dl>
 
 
+
+<dt><b>Music streams thesis available</b> - <em>October 21, 2006</em>
+
+<dd>
+The last months, Erik Sandberg has been overhauling the internals of
+Lily. This change introduces a new intermediate format, Music Streams,
+which will make it easier get music data out of LilyPond. A copy of
+the thesis is now available from lilypond.org (<a
+href="@IMAGES@thesis-erik-sandberg.pdf">download PDF 750k</a>)
+
+</dd>
+
+
+
+<dt><b>LilyPond 2.9.26 available</b> - <em>October 20, 2006</em>
+
+<dd>
+This release has further bugfixes.   (<a
+href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_26&colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
+<a href="install/#2.9">Download</a>)
+</dd>
+
 <dt><b>LilyPond 2.9.25 available</b> - <em>October 18, 2006</em>
 
 <dd>
@@ -29,7 +51,6 @@ This release has more bugfixes; from now on, binaries are also
 available for x86/64.  (<a
 href="http://code.google.com/p/lilypond/issues/list?can=1&q=fixed_2_9_25&colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
 <a href="install/#2.9">Download</a>)
-
 </dd>
 
 
