@@ -1,3 +1,7 @@
+2006-11-08  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably): typos, move chunks to old news.
+
 2006-11-07  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/news.ihtml (Preferably): .29
